--- a/about/index.html
+++ b/about/index.html
@@ -177,7 +177,7 @@
 
       
       <li class="social-item">
-        <a href="mailto:ylzcylx@gmail.com" title="Email"><span class="icon icon-email"></span></a>
+        <a href="mailto:eWx6Y3lseEBnbWFpbC5jb20=" title="Email"><span class="icon icon-email"></span></a>
       </li>
 
       
@@ -244,6 +244,28 @@
 <p>刚毕业时在一家小型IT服务公司从事运维工作。之后到上海，加入了 <a href="http://www.ebay.com">eBay</a> 中国研发中心从事 SCM 工程师的工作。期间为了开发一些内部服务开始接触 <a href="http://rubyonrails.org/">Ruby on Rails 框架</a>。最终在14年以一名 RoR 工程师的身份加入了 <a href="https://www.rakuten.co.jp/">Rakuten</a> 中国研发中心，负责开发公司内部的自动化运维平台。由于是内部系统，所以同时也负责前端页面的开发，并渐渐的把工作重心移到了前端。15 年 4 月正式加入京东用户体验设计部，开始了全新的前端旅程。</p>
 
 <p>目前在<a href="https://www.jd.com">京东</a>主要负责京东商城 PC 端黄金购物流程以及京东 APP 内部分 <a href="https://facebook.github.io/react-native/">React Native</a> 页面的开发工作。</p>
+
+<p>工作中顺手开发几个 Chrome 插件：</p>
+
+<ul>
+<li><a href="https://chrome.google.com/webstore/detail/dns-flusher/nbomnjapnclaocillijpceooehonajnk">DNS Flusher</a> 一键清理 DNS 缓存</li>
+<li><a href="https://chrome.google.com/webstore/detail/which-host/hjecimglpgbbajfigibmieancoegaema">Which Host</a> 在页面上展示对应域名实际请求的 IP</li>
+</ul>
+
+<p>平时主要用到以下技术/工具：</p>
+
+<ul>
+<li>jQuery / React / React Native</li>
+<li>Redux / Mobx / Axios</li>
+<li>SeaJS / Webpack / Rollup / Babel</li>
+<li>Jest / Mocha / Chai / Sison</li>
+<li>ESLint</li>
+<li>Git / GitLab / GitHub</li>
+<li>Fiddler / Wireshark / Chrome Dev Tools</li>
+<li>VSCode</li>
+</ul>
+
+<p>京东 JDC 常年招聘靠谱的前端工程师，有意的小伙伴请发简历至 <code>eWx6Y3lseEBnbWFpbC5jb20=</code></p>
 
 <p>如无特殊说明，本站全部文章均为原创。转载时请注明出处，非常感谢。</p>
 </article>
