新文章：Flutter初体验

--- a/about/index.html
+++ b/about/index.html
@@ -253,14 +253,15 @@
 <p>平时主要用到以下技术/工具：</p>
 
 <ul>
-<li>jQuery / React / React Native</li>
-<li>Redux / Mobx / Axios</li>
-<li>SeaJS / Webpack / Rollup / Babel</li>
+<li>JavaScript / TypeScript / Dart</li>
+<li>jQuery / React / React Native / Flutter</li>
+<li>Redux / MobX</li>
+<li>SeaJS / Webpack / Rollup</li>
 <li>Jest / Mocha / Chai / Sison</li>
-<li>ESLint</li>
+<li>ESLint / TSLint</li>
 <li>Git / GitLab / GitHub</li>
 <li>Fiddler / Wireshark / Chrome Dev Tools</li>
-<li>VSCode</li>
+<li>VS Code</li>
 </ul>
 
 <p>京东 JDC 常年招聘靠谱的前端工程师，有意的小伙伴请发简历至 <code>eWx6Y3lseEBnbWFpbC5jb20=</code></p>
