--- a/about/index.html
+++ b/about/index.html
@@ -229,22 +229,24 @@
 
 <h4 id="工作经历">工作经历</h4>
 
-<p>刚毕业时在一家小型IT服务公司从事运维工作。之后到上海，加入了 <a href="http://www.ebay.com">eBay</a> 中国研发中心从事 SCM 工程师的工作。期间为了开发一些内部服务开始接触 <a href="http://rubyonrails.org/">Ruby on Rails 框架</a>。最终在14年以一名 RoR 工程师的身份加入了 <a href="https://www.rakuten.co.jp/">Rakuten</a> 中国研发中心，负责开发公司内部的自动化运维平台。由于是内部系统，所以同时也负责前端页面的开发，并渐渐的把工作重心移到了前端。15 年 4 月正式加入京东用户体验设计部，开始了全新的前端旅程。</p>
+<p>刚毕业时在一家小型IT服务公司从事运维工作。之后到上海，加入了 <a href="http://www.ebay.com">eBay</a> 中国研发中心从事 SCM 工程师的工作。期间为了开发一些内部服务开始接触 <a href="http://rubyonrails.org/">Ruby on Rails 框架</a>。最终在14年以一名 RoR 工程师的身份加入了 <a href="https://www.rakuten.co.jp/">Rakuten</a> 中国研发中心，负责开发公司内部的自动化运维平台。由于是内部系统，所以同时也负责前端页面的开发，并渐渐的把工作重心移到了前端。2015 年 4 月正式加入京东用户体验设计部，开始了全新的前端旅程。</p>
 
-<p>目前在<a href="https://www.jd.com">京东</a>主要负责京东商城 PC 端黄金购物流程以及京东 APP 内部分 <a href="https://facebook.github.io/react-native/">React Native</a> 页面的开发工作。</p>
+<p>在京东期间先后负责过京东商城 PC 端黄金购物流程、京东 APP 内部分 <a href="https://facebook.github.io/react-native/">React Native</a> 页面的开发工作。目前主要工作内容为内部生产力工具的调研与研发。</p>
 
-<h4 id="工作中顺手开发的几个-chrome-插件">工作中顺手开发的几个 Chrome 插件</h4>
+<h4 id="项目">项目</h4>
 
 <ul>
-<li><a href="https://chrome.google.com/webstore/detail/dns-flusher/nbomnjapnclaocillijpceooehonajnk">DNS Flusher</a> 一键清理 DNS 缓存</li>
-<li><a href="https://chrome.google.com/webstore/detail/which-host/hjecimglpgbbajfigibmieancoegaema">Which Host</a> 在页面上展示对应域名实际请求的 IP</li>
+<li><a href="https://rocketact.js.org">Rocketact</a>  🚀 Developing React projects with ease</li>
+<li><a href="https://chrome.google.com/webstore/detail/dns-flusher/nbomnjapnclaocillijpceooehonajnk">DNS Flusher</a> 一键清理 DNS 缓存的 Chrome 插件</li>
+<li><a href="https://chrome.google.com/webstore/detail/which-host/hjecimglpgbbajfigibmieancoegaema">Which Host</a> 在页面上展示对应域名实际请求的 IP 的 Chrome 插件</li>
 </ul>
 
 <h4 id="平时主要使用以下技术-工具">平时主要使用以下技术/工具</h4>
 
 <ul>
-<li><a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics">JavaScript</a> / <a href="https://www.typescriptlang.org/index.html">TypeScript</a> / <a href="https://www.dartlang.org/">Dart</a></li>
-<li><a href="https://jquery.com/">jQuery</a> / <a href="https://reactjs.org/">React</a> / <a href="https://facebook.github.io/react-native/">React Native</a> / <a href="https://flutter.io/">Flutter</a></li>
+<li><a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics">JavaScript</a> / <a href="https://www.typescriptlang.org/index.html">TypeScript</a> / <del><a href="https://www.dartlang.org/">Dart</a></del></li>
+<li><a href="https://jquery.com/">jQuery</a> / <a href="https://reactjs.org/">React</a> / <a href="https://facebook.github.io/react-native/">React Native</a> / <del><a href="https://flutter.io/">Flutter</a></del></li>
+<li><a href="https://nestjs.com/">NestJS</a></li>
 <li><a href="https://redux.js.org/">Redux</a> / <a href="https://github.com/mobxjs/mobx">MobX</a></li>
 <li><a href="https://github.com/seajs/seajs">SeaJS</a> / <a href="https://webpack.js.org/">Webpack</a> / <a href="https://rollupjs.org/guide/en">Rollup</a></li>
 <li><a href="https://jestjs.io/">Jest</a> / <a href="https://mochajs.org/">Mocha</a> / <a href="http://www.chaijs.com/">Chai</a> / <a href="http://sinonjs.org/">Sison</a></li>
@@ -253,8 +255,6 @@
 <li><a href="https://www.telerik.com/fiddler">Fiddler</a> / <a href="https://www.wireshark.org/">Wireshark</a> / <a href="https://developers.google.com/web/tools/chrome-devtools/">Chrome Dev Tools</a></li>
 <li><a href="https://code.visualstudio.com/">VS Code</a></li>
 </ul>
-
-<p>京东 JDC 常年招聘靠谱的前端工程师，有意的小伙伴请发简历至 <code>eWx6Y3lseEBnbWFpbC5jb20=</code></p>
 
 <p>如无特殊说明，本站全部文章均为原创。转载时请注明出处，非常感谢。</p>
 
