--- a/about/index.html
+++ b/about/index.html
@@ -259,8 +259,16 @@
 <p>如无特殊说明，本站全部文章均为原创。转载时请注明出处，非常感谢。</p>
 
 <figure>
+    <img src="https://loveky.github.io/img/20190504.jpeg"
+         alt="loveky和小草莓在滹沱河畔" width="800"/> <figcaption>
+            <h4>loveky和小草莓在滹沱河畔 摄于2019/5/4</h4>
+        </figcaption>
+</figure>
+
+
+<figure>
     <img src="//img30.360buyimg.com/uba/jfs/t18706/344/2155227655/646522/37d8ad36/5aea9e0eN96c99b22.jpg"
-         alt="loveky和小草莓" width="800"/> <figcaption>
+         alt="loveky和小草莓在野生原度假村" width="800"/> <figcaption>
             <h4>loveky和小草莓在野生原度假村 摄于2018/5/2</h4>
         </figcaption>
 </figure>
