增加 React Podcast 链接

--- a/links/index.html
+++ b/links/index.html
@@ -227,7 +227,13 @@
       <a class="link-item" href="https://beanlee.github.io/">
         <img class="link-avatar" src="https://beanlee.github.io/favicon.png" alt="豆子先生">
         <h3 class="link-title">豆子先生</h3>
-        <p class="link-description">曾经的 Java 工程师，现在的前端工程师</p>
+        <p class="link-description">Java、前端两开花的豆先生</p>
+      </a>
+    
+      <a class="link-item" href="https://reactpodcast.simplecast.fm/">
+        <img class="link-avatar" src="https://media.simplecast.com/episode/image/295799/thumb_1557189115-artwork.jpg" alt="React Podcast">
+        <h3 class="link-title">React Podcast</h3>
+        <p class="link-description">有趣、有料的 React 播客</p>
       </a>
     
   </section>
